--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -31,9 +31,10 @@
         android:background="@drawable/border_bottom_text"
         android:cursorVisible="true"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Enter old password"
+        android:inputType="textPassword"
         android:paddingVertical="10dp"
+        android:textColor="@color/primary"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -56,9 +57,10 @@
         android:background="@drawable/border_bottom_text"
         android:cursorVisible="true"
         android:ems="10"
-        android:inputType="textPassword"
         android:hint="Enter new password"
+        android:inputType="textPassword"
         android:paddingVertical="10dp"
+        android:textColor="@color/primary"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -78,13 +80,14 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="10dp"
+        android:background="@drawable/border_bottom_text"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="Confirm new password"
         android:inputType="textPassword"
-        android:background="@drawable/border_bottom_text"
-        android:textCursorDrawable="@color/black"
-        android:cursorVisible="true"
         android:paddingVertical="10dp"
+        android:textColor="@color/primary"
+        android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
     <TextView
