--- a/app/src/main/res/layout/activity_action_bar_layout.xml
+++ b/app/src/main/res/layout/activity_action_bar_layout.xml
@@ -10,9 +10,9 @@
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textAlignment="center"
         android:text="ACTION BAR"
-        android:textColor="@color/white"
+        android:textAlignment="center"
+        android:textColor="@color/lightGray"
         android:textStyle="bold" />
 
 </LinearLayout>
