--- a/app/src/main/res/layout/activity_create_study_set.xml
+++ b/app/src/main/res/layout/activity_create_study_set.xml
@@ -24,7 +24,8 @@
             android:hint="Subject, chapter, unit"
             android:paddingHorizontal="5dp"
             android:paddingVertical="10dp"
-            android:textColor="@color/black"
+            android:textColor="@color/primary"
+            android:textColorHint="@color/primary"
             android:textCursorDrawable="@color/black"
             android:textSize="18dp" />
 
@@ -34,7 +35,7 @@
             android:layout_marginBottom="20dp"
             android:padding="3dp"
             android:text="TITLE"
-            android:textColor="@color/dark_gray"
+            android:textColor="@color/primary"
             android:textStyle="bold" />
 
         <LinearLayout
