--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="Some set(s) your study recently"
+            android:textColor="@color/primary"
             android:textSize="18dp"
             android:textStyle="bold" />
 
@@ -35,6 +36,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="Your set(s)"
+            android:textColor="@color/primary"
             android:textSize="18dp"
             android:textStyle="bold" />
 
