--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -29,6 +29,7 @@
                 android:hint="Search"
                 android:paddingHorizontal="10dp"
                 android:textAlignment="textStart"
+                android:textColor="@color/primary"
                 android:textColorHint="#787878"
                 android:textSize="18dp" />
 
@@ -52,13 +53,14 @@
             android:scrollbars="vertical" />
 
         <TextView
-            android:textStyle="bold"
-            android:padding="10dp"
-            android:textSize="18dp"
-            android:layout_weight="1"
             android:id="@+id/tv_search_noti"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:padding="10dp"
+            android:textColor="@color/primary"
+            android:textSize="18dp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 
