--- a/app/src/main/res/layout/activity_action_bar_layout.xml
+++ b/app/src/main/res/layout/activity_action_bar_layout.xml
@@ -10,7 +10,7 @@
         style="@style/TextAppearance.AppCompat.Widget.ActionBar.Title"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="ACTION BAR"
+        android:text="@string/action_bar"
         android:textAlignment="center"
         android:textColor="@color/lightGray"
         android:textStyle="bold" />
