--- a/app/src/main/res/layout/activity_signup.xml
+++ b/app/src/main/res/layout/activity_signup.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     tools:context=".activity.SignUpActivity">
 
     <Button
@@ -55,12 +56,12 @@
         android:layout_marginStart="29dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="10dp"
-        android:ems="10"
         android:background="@drawable/border_bottom_text"
         android:cursorVisible="true"
+        android:ems="10"
         android:hint="example@email.com"
-        android:textCursorDrawable="@color/black"
         android:inputType="textEmailAddress"
+        android:textCursorDrawable="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/tv_email"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -72,12 +73,12 @@
         android:layout_marginStart="29dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="10dp"
+        android:background="@drawable/border_bottom_text"
+        android:cursorVisible="true"
         android:ems="10"
         android:hint="Create your username"
-        android:background="@drawable/border_bottom_text"
-        android:textCursorDrawable="@color/black"
-        android:cursorVisible="true"
         android:inputType="textPersonName"
+        android:textCursorDrawable="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/tv_username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -89,12 +90,12 @@
         android:layout_marginStart="29dp"
         android:layout_marginEnd="29dp"
         android:layout_marginBottom="10dp"
-        android:ems="10"
-        android:hint="Create your password"
         android:background="@drawable/border_bottom_text"
         android:cursorVisible="true"
-        android:textCursorDrawable="@color/black"
+        android:ems="10"
+        android:hint="Create your password"
         android:inputType="textPassword"
+        android:textCursorDrawable="@color/black"
         app:layout_constraintBottom_toTopOf="@+id/tv_password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -200,7 +201,7 @@
         android:layout_marginTop="41dp"
         android:layout_marginEnd="328dp"
         android:layout_marginBottom="30dp"
-        android:backgroundTint="#FFFFFF"
+        android:backgroundTint="@color/primary"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
