--- a/app/src/main/res/layout/activity_study_set_details.xml
+++ b/app/src/main/res/layout/activity_study_set_details.xml
@@ -81,17 +81,18 @@
             app:layout_constraintVertical_bias="0.0"
             app:srcCompat="@drawable/flashcard_blue" />
 
-        <ListView
-            android:id="@+id/lv_study_set_details"
-            android:layout_width="387dp"
-            android:layout_height="409dp"
-            android:layout_marginTop="350dp"
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/rc_study_set_details"
+            android:layout_width="350dp"
+            android:layout_height="315dp"
+            android:layout_marginStart="32dp"
+            android:layout_marginTop="352dp"
+            android:layout_marginEnd="32dp"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.549"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
 
-        </ListView>
+        </androidx.recyclerview.widget.RecyclerView>
 
         <Button
             android:id="@+id/btn_study_set"
@@ -101,14 +102,15 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="15dp"
             android:layout_marginEnd="32dp"
-            android:layout_marginBottom="10dp"
             android:backgroundTint="@color/aqua"
             android:text="Study this set"
             android:textStyle="bold"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/lv_study_set_details" />
+            app:layout_constraintTop_toBottomOf="@+id/rc_study_set_details"
+            app:layout_constraintVertical_bias="0.0" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
