--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_smoke"
+    android:background="@color/primary"
     android:paddingHorizontal="10dp"
     android:paddingTop="20dp"
     tools:context=".fragments.HomeFragment">
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="Some set(s) your study recently"
-            android:textColor="@color/primary"
+            android:textColor="@color/Gainsboro"
             android:textSize="18dp"
             android:textStyle="bold"
             android:visibility="visible" />
@@ -37,7 +37,7 @@
             android:layout_height="wrap_content"
             android:layout_marginVertical="20dp"
             android:text="Your set(s)"
-            android:textColor="@color/primary"
+            android:textColor="@color/Gainsboro"
             android:textSize="18dp"
             android:textStyle="bold" />
 
@@ -56,7 +56,7 @@
             android:layout_marginTop="30dp"
             android:padding="10dp"
             android:text="If you want to create set, let choose icon (+) on navigation bar!"
-            android:textColor="@color/gray"
+            android:textColor="@color/Gainsboro"
             android:textSize="16dp"
             android:textStyle="bold" />
     </LinearLayout>
