--- a/app/src/main/res/layout/listview_study_set_item.xml
+++ b/app/src/main/res/layout/listview_study_set_item.xml
@@ -1,19 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
     android:gravity="center"
     android:orientation="vertical">
 
     <TextView
-        android:layout_marginTop="20dp"
-        android:background="@color/white"
-        android:padding="10dp"
-        android:id="@+id/tv_study_item"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:id="@+id/tvQuestion"
+        android:layout_width="419dp"
+        android:layout_height="276dp"
+        android:layout_marginTop="24dp"
+        android:background="@color/primary"
+        android:gravity="center|center_vertical"
         android:minHeight="100dp"
-        android:gravity="start"
-        android:textColor="@color/black" />
+        android:text="SUDHSHJDSJDHJSD"
+        android:textColor="@color/Gainsboro"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.487"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</LinearLayout>
+    <View
+        android:id="@+id/divider"
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        android:layout_marginTop="20dp"
+        android:background="?android:attr/listDivider"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/tvQuestion" />
+
+
+</androidx.constraintlayout.widget.ConstraintLayout>
