--- a/app/src/main/res/layout/activity_learning.xml
+++ b/app/src/main/res/layout/activity_learning.xml
@@ -1,134 +1,84 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--    xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--    xmlns:tools="http://schemas.android.com/tools"-->
-<!--    android:layout_width="match_parent"-->
-<!--    android:layout_height="match_parent"-->
-<!--    android:layout_margin="10dp"-->
-<!--    android:backgroundTint="@color/white_smoke"-->
-<!--    android:gravity="center"-->
-<!--    tools:context=".activity.LearningActivity">-->
 
-<!--    <LinearLayout-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        android:layout_marginTop="10dp"-->
-<!--        android:orientation="vertical">-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_learn_question"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginVertical="50dp"-->
-<!--            android:minHeight="100dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"-->
-<!--            android:textSize="20dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_learn_answer_1"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:background="@drawable/border_white"-->
-<!--            android:minHeight="60dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="aaaaaaaaaaaaaaaaaaaa"-->
-<!--            android:textSize="20dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_learn_answer_2"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:background="@drawable/border_white"-->
-<!--            android:minHeight="60dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="aaaaaaaaaaaaaaaaaaaa"-->
-<!--            android:textSize="20dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_learn_answer_3"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:background="@drawable/border_white"-->
-<!--            android:minHeight="60dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="aaaaaaaaaaaaaaaaaaaa"-->
-<!--            android:textSize="20dp" />-->
-
-<!--        <TextView-->
-<!--            android:id="@+id/tv_learn_answer_4"-->
-<!--            android:layout_width="match_parent"-->
-<!--            android:layout_height="wrap_content"-->
-<!--            android:layout_marginTop="20dp"-->
-<!--            android:background="@drawable/border_white"-->
-<!--            android:minHeight="60dp"-->
-<!--            android:padding="10dp"-->
-<!--            android:text="aaaaaaaaaaaaaaaaaaaa"-->
-<!--            android:textSize="20dp" />-->
-
-<!--    </LinearLayout>-->
-
-
-<!--</ScrollView>-->
-
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.LearningActivity"
-    android:orientation="vertical"
-    android:gravity="center_horizontal"
-    >
+    android:background="@color/primary"
+    tools:context=".activity.LearningActivity">
 
-    <TextView
-        android:id="@+id/countLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Q1"
-        android:textSize="22sp"
-        android:layout_marginTop="30dp"/>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:background="@color/primary"
+        android:gravity="center_horizontal"
+        android:orientation="vertical">
 
-    <TextView
-        android:id="@+id/questionLabel"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Question"
-        android:textSize="24sp"
-        android:layout_marginTop="60dp"/>
+        <TextView
+            android:id="@+id/countLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="60dp"
+            android:text="Q1"
+            android:textColor="@color/white_smoke"
+            android:textSize="22sp" />
 
-    <Button
-        android:id="@+id/answerBtn1"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="Answer1"
-        android:layout_marginTop="80dp"
-        android:onClick="checkAnswer"/>
+        <TextView
+            android:id="@+id/questionLabel"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="80dp"
+            android:layout_marginBottom="60dp"
+            android:text="Question"
+            android:textSize="24sp" />
 
-    <Button
-        android:id="@+id/answerBtn2"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="Answer2"
-        android:layout_marginTop="6dp"
-        android:onClick="checkAnswer"/>
+        <Button
+            android:id="@+id/answerBtn1"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="10dp"
+            android:onClick="checkAnswer"
+            android:text="Answer1"
+            android:textColor="@color/white_smoke"
+            android:textSize="10sp" />
 
-    <Button
-        android:id="@+id/answerBtn3"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="Answer3"
-        android:layout_marginTop="6dp"
-        android:onClick="checkAnswer"/>
+        <Button
+            android:id="@+id/answerBtn2"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="6dp"
+            android:onClick="checkAnswer"
+            android:text="Answer2"
+            android:textColor="@color/white_smoke"
+            android:textSize="10sp" />
 
-    <Button
-        android:id="@+id/answerBtn4"
-        android:layout_width="300dp"
-        android:layout_height="60dp"
-        android:text="Answer4"
-        android:layout_marginTop="6dp"
-        android:onClick="checkAnswer"/>
-</LinearLayout>
+        <Button
+            android:id="@+id/answerBtn3"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="6dp"
+            android:onClick="checkAnswer"
+            android:text="Answer3"
+            android:textColor="@color/white_smoke"
+            android:textSize="10sp" />
+
+        <Button
+            android:id="@+id/answerBtn4"
+            android:layout_width="300dp"
+            android:layout_height="100dp"
+            android:layout_margin="5dp"
+            android:layout_marginTop="6dp"
+            android:onClick="checkAnswer"
+            android:text="Answer4"
+            android:textColor="@color/white_smoke"
+            android:textSize="10sp" />
+
+    </LinearLayout>
+
+
+</FrameLayout>
+
+
