--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -3,38 +3,43 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.ResultActivity"
+    android:background="@color/primary"
+    android:gravity="center|center_horizontal|center_vertical"
     android:orientation="vertical"
-    android:gravity="center_horizontal">
+    tools:context=".activity.ResultActivity">
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="50dp"
         android:text="RESULT"
-        android:textSize="20sp"
-        android:layout_marginTop="50dp"/>
+        android:textColor="@color/white_smoke"
+        android:textSize="20sp" />
 
     <TextView
         android:id="@+id/resultLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:text="3 / 5"
-        android:textSize="30sp"
-        android:layout_marginTop="60dp"/>
+        android:textColor="@color/white_smoke"
+        android:textSize="30sp" />
 
     <TextView
         android:id="@+id/totalScoreLabel"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="60dp"
         android:text="Total Score : 888"
-        android:textSize="20sp"
-        android:layout_marginTop="60dp"/>
+        android:textColor="@color/white_smoke"
+        android:textSize="20sp" />
 
     <Button
         android:layout_width="140dp"
         android:layout_height="60dp"
-        android:text="Return"
-        android:textSize="18sp"
         android:layout_marginTop="80dp"
-        android:onClick="returnTop" />
+        android:onClick="returnTop"
+        android:text="Return"
+        android:textColor="@color/white_smoke"
+        android:textSize="18sp" />
 </LinearLayout>
