--- a/app/src/main/res/layout/activity_change_password.xml
+++ b/app/src/main/res/layout/activity_change_password.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/primary"
     android:orientation="vertical"
-    android:background="@color/white_smoke"
     tools:context=".activity.ChangePasswordActivity">
 
     <TextView
@@ -16,7 +16,8 @@
         android:layout_marginLeft="10dp"
         android:text="Old password:"
         android:textAlignment="viewStart"
-        android:textColor="#232323"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -34,7 +35,8 @@
         android:hint="Enter old password"
         android:inputType="textPassword"
         android:paddingVertical="10dp"
-        android:textColor="@color/primary"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -46,7 +48,8 @@
         android:layout_marginLeft="10dp"
         android:text="New password:"
         android:textAlignment="viewStart"
-        android:textColor="#232323"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textSize="20sp" />
 
     <EditText
@@ -60,7 +63,8 @@
         android:hint="Enter new password"
         android:inputType="textPassword"
         android:paddingVertical="10dp"
-        android:textColor="@color/primary"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -72,7 +76,8 @@
         android:layout_marginLeft="10dp"
         android:text="Confirm new password:"
         android:textAlignment="viewStart"
-        android:textColor="#232323"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textSize="20sp" />
 
     <EditText
@@ -86,7 +91,8 @@
         android:hint="Confirm new password"
         android:inputType="textPassword"
         android:paddingVertical="10dp"
-        android:textColor="@color/primary"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
 
@@ -94,10 +100,11 @@
         android:id="@+id/tv_msg_change_pass"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textColor="@color/red"
-        android:textStyle="bold"
         android:layout_marginHorizontal="10dp"
-        />
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/white_smoke"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
@@ -109,16 +116,16 @@
             android:layout_width="144dp"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="35dp"
-            android:text="Save"
             android:backgroundTint="@color/aqua"
-            android:textStyle="bold"/>
+            android:text="Save"
+            android:textStyle="bold" />
 
         <Button
             android:id="@+id/btn_cancel_change_pass"
             android:layout_width="141dp"
             android:layout_height="wrap_content"
-            android:text="Cancel"
             android:backgroundTint="@color/aqua"
-            android:textStyle="bold"/>
+            android:text="Cancel"
+            android:textStyle="bold" />
     </LinearLayout>
 </LinearLayout>
