--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -14,10 +14,12 @@
             android:id="@+id/tv_quiz_recently"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginVertical="20dp"
+            android:layout_margin="20dp"
+            android:layout_marginVertical="40dp"
             android:text="Some set(s) your study recently"
+            android:textAlignment="center"
             android:textColor="@color/Gainsboro"
-            android:textSize="18dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:visibility="visible" />
 
@@ -25,6 +27,7 @@
             android:id="@+id/rc_quiz_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:layout_marginTop="10dp"
             android:scrollbars="vertical" />
 
@@ -33,10 +36,12 @@
             android:id="@+id/tv_your_set"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:layout_marginVertical="20dp"
             android:text="Your set(s)"
+            android:textAlignment="center"
             android:textColor="@color/Gainsboro"
-            android:textSize="18dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
 
 
@@ -44,6 +49,8 @@
             android:id="@+id/rc_your_quiz_home"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
             android:layout_marginTop="10dp"
             android:scrollbars="vertical" />
 
@@ -51,11 +58,13 @@
             android:id="@+id/tv_home_instruction"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="20dp"
             android:layout_marginTop="30dp"
             android:padding="10dp"
             android:text="If you want to create set, let choose icon (+) on navigation bar!"
+            android:textAlignment="center"
             android:textColor="@color/Gainsboro"
-            android:textSize="16dp"
+            android:textSize="20sp"
             android:textStyle="bold" />
     </LinearLayout>
 </FrameLayout>
