--- a/app/src/main/res/layout/activity_about_app.xml
+++ b/app/src/main/res/layout/activity_about_app.xml
@@ -1,16 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:fillViewport="true"
     android:background="@color/white_smoke"
+    android:fillViewport="true"
     tools:context=".activity.AboutAppActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@color/primary"
         android:orientation="vertical">
 
         <TextView
@@ -20,7 +20,7 @@
             android:layout_marginHorizontal="5dp"
             android:layout_marginVertical="10dp"
             android:text="Terms of Service"
-            android:textColor="#100F0F"
+            android:textColor="@color/white_smoke"
             android:textSize="20sp"
             android:textStyle="bold" />
 
@@ -31,7 +31,7 @@
             android:layout_marginHorizontal="10dp"
             android:layout_marginVertical="10dp"
             android:text="@string/about_app_content"
-            android:textColor="@color/black" />
+            android:textColor="@color/white_smoke" />
     </LinearLayout>
 </ScrollView>
 
