--- a/app/src/main/res/layout/activity_change_username.xml
+++ b/app/src/main/res/layout/activity_change_username.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_smoke"
+    android:layout_gravity="center"
+    android:background="@color/primary"
     android:orientation="vertical"
     tools:context=".activity.ChangeUsernameActivity">
 
@@ -16,7 +17,7 @@
         android:layout_marginLeft="10dp"
         android:text="Username:"
         android:textAlignment="viewStart"
-        android:textColor="#232323"
+        android:textColor="@color/white_smoke"
         android:textSize="20sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -33,20 +34,22 @@
         android:ems="10"
         android:hint="Enter username"
         android:paddingVertical="10dp"
-        android:textColor="@color/primary"
+        android:textColor="@color/white_smoke"
+        android:textColorHint="@color/lightGray"
         android:textCursorDrawable="@color/black"
         tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />
-        <TextView
-            android:id="@+id/tv_msg_change_username"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:textColor="@color/red"
-            android:layout_marginHorizontal="10dp"
-            android:textStyle="bold"
-            />
+
+    <TextView
+        android:id="@+id/tv_msg_change_username"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="10dp"
+        android:textColor="@color/red"
+        android:textStyle="bold" />
+
     <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
         android:orientation="horizontal">
 
