--- a/app/src/main/res/layout/activity_study_set_details.xml
+++ b/app/src/main/res/layout/activity_study_set_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white_smoke"
+    android:background="@color/primary"
     android:paddingVertical="20dp"
     tools:context=".activity.StudySetDetailsActivity">
 
@@ -17,11 +17,11 @@
             android:layout_width="250dp"
             android:layout_height="82dp"
             android:layout_marginStart="70dp"
-            android:layout_marginTop="35dp"
+            android:layout_marginTop="48dp"
             android:layout_marginEnd="171dp"
             android:text="Câu hỏi ôn luyện OKRs"
-            android:textColor="@color/black"
-            android:textSize="35dp"
+            android:textColor="@color/white_smoke"
+            android:textSize="60sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -34,8 +34,8 @@
             android:layout_marginStart="37dp"
             android:layout_marginTop="30dp"
             android:text="Author"
-            android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textColor="@color/white_smoke"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/tv_study_title" />
@@ -47,8 +47,8 @@
             android:layout_marginStart="20dp"
             android:layout_marginTop="30dp"
             android:text="50 Terms"
-            android:textColor="@color/black"
-            android:textSize="18dp"
+            android:textColor="@color/white_smoke"
+            android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintStart_toEndOf="@+id/tv_author"
             app:layout_constraintTop_toBottomOf="@+id/tv_study_title" />
@@ -88,6 +88,7 @@
             android:layout_marginStart="32dp"
             android:layout_marginTop="352dp"
             android:layout_marginEnd="32dp"
+            android:background="@color/white_smoke"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
