--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,117 +11,121 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        xmlns:app="http://schemas.android.com/apk/res-auto"
+        android:background="@color/primary"
         android:orientation="vertical"
         tools:context=".activity.ProfileActivity">
 
         <androidx.constraintlayout.utils.widget.ImageFilterView
             android:layout_width="match_parent"
             android:layout_height="180dp"
+            android:layout_gravity="center"
             android:layout_marginHorizontal="110dp"
             android:layout_marginTop="50dp"
             android:layout_marginBottom="10dp"
             android:background="@color/dark_blue"
+            android:src="@drawable/person_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_gravity="center"
             app:roundPercent="1"
-            android:src="@drawable/person_image" />
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/tv_username_profile"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:text="abc"
             android:textAlignment="center"
-            android:text="abc" />
+            android:textSize="24sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tv_change_username"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/box_shadow"
+            android:clickable="true"
+            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
+            android:elevation="5dp"
             android:paddingHorizontal="10dp"
             android:paddingVertical="10dp"
-            android:layout_marginTop="20dp"
+            android:text="Change Username"
+            android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:clickable="true"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="10dp"
-            android:text="Change Username"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:background="@drawable/box_shadow"
-            android:elevation="5dp"
             tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/tv_change_email"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/box_shadow"
+            android:clickable="true"
+            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
+            android:elevation="5dp"
             android:paddingHorizontal="10dp"
             android:paddingVertical="10dp"
-            android:layout_marginTop="20dp"
+            android:text="Change Email"
+            android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:clickable="true"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="10dp"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:text="Change Email"
-            android:background="@drawable/box_shadow"
-            android:elevation="5dp"
             tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/tv_change_password"
             android:layout_width="match_parent"
             android:layout_height="50dp"
+            android:layout_marginHorizontal="10dp"
+            android:layout_marginTop="20dp"
+            android:background="@drawable/box_shadow"
+            android:clickable="true"
+            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
+            android:elevation="5dp"
             android:paddingHorizontal="10dp"
             android:paddingVertical="10dp"
-            android:layout_marginTop="20dp"
+            android:text="Change Password"
+            android:textColor="@color/black"
             android:textSize="20dp"
             android:textStyle="bold"
-            android:clickable="true"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="10dp"
-            android:text="Change Password"
-            android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:background="@drawable/box_shadow"
-            android:elevation="5dp"
             tools:ignore="TouchTargetSizeCheck" />
+
         <TextView
             android:id="@+id/tv_aboutApp"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:background="@drawable/box_shadow"
             android:clickable="true"
             android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="10dp"
-            android:text="About App"
-            android:background="@drawable/box_shadow"
             android:elevation="5dp"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="10dp"
+            android:text="About App"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"
             tools:ignore="TouchTargetSizeCheck" />
 
         <TextView
             android:id="@+id/tv_log_out"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:paddingHorizontal="10dp"
-            android:paddingVertical="10dp"
+            android:layout_marginHorizontal="10dp"
             android:layout_marginTop="20dp"
-            android:textSize="20dp"
-            android:textStyle="bold"
+            android:background="@drawable/box_shadow"
             android:clickable="true"
             android:drawableRight="@drawable/ic_baseline_navigate_next_24"
-            android:textColor="@color/black"
-            android:layout_marginHorizontal="10dp"
-            android:text="Log out"
-            android:background="@drawable/box_shadow"
             android:elevation="5dp"
+            android:paddingHorizontal="10dp"
+            android:paddingVertical="10dp"
+            android:text="Log out"
+            android:textColor="@color/black"
+            android:textSize="20dp"
+            android:textStyle="bold"
             tools:ignore="TouchTargetSizeCheck" />
     </LinearLayout>
 
