--- a/app/src/main/res/layout/listview_study_set_item.xml
+++ b/app/src/main/res/layout/listview_study_set_item.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
@@ -12,11 +11,11 @@
         android:layout_width="419dp"
         android:layout_height="276dp"
         android:layout_marginTop="24dp"
-        android:background="@color/primary"
+        android:background="@color/white_smoke"
         android:gravity="center|center_vertical"
         android:minHeight="100dp"
         android:text="SUDHSHJDSJDHJSD"
-        android:textColor="@color/Gainsboro"
+        android:textColor="@color/primary"
         android:textSize="20sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
