--- a/app/src/main/res/layout/activity_edit_study_set.xml
+++ b/app/src/main/res/layout/activity_edit_study_set.xml
@@ -1,12 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
-
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@color/white_smoke"
-    tools:context=".activity.CreateStudySetActivity">
+    tools:context=".activity.EditStudySetActivity">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,11 +15,12 @@
         android:orientation="vertical">
 
         <EditText
-            android:id="@+id/edt_create_quiz_title"
+            android:id="@+id/edt_edit_quiz_title"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@drawable/border_bottom_text"
             android:cursorVisible="true"
+            android:focusable="true"
             android:hint="Subject, chapter, unit"
             android:paddingHorizontal="5dp"
             android:paddingVertical="10dp"
@@ -44,8 +44,6 @@
             android:layout_height="wrap_content"
             android:gravity="center"
             android:orientation="vertical">
-
-<!--            <include layout="@layout/list_view_create_set_item"></include>-->
         </LinearLayout>
 
         <ImageButton
@@ -58,7 +56,7 @@
             tools:ignore="SpeakableTextPresentCheck" />
 
         <Button
-            android:id="@+id/btn_save_set"
+            android:id="@+id/btn_edit_set"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:backgroundTint="@color/primary"
