--- a/app/src/main/res/layout/list_view_create_set_item.xml
+++ b/app/src/main/res/layout/list_view_create_set_item.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="@drawable/border_white"
@@ -19,7 +18,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:backgroundTint="@color/red"
-            android:minHeight="30dp"
+            android:contentDescription="Remove"
+            android:minHeight="39dp"
             android:text="Remove"
             android:textColor="@color/white" />
     </LinearLayout>
@@ -32,7 +32,8 @@
         android:layout_marginTop="20dp"
         android:layout_toLeftOf="@id/remove"
         android:background="@drawable/border_bottom_text"
-        android:minHeight="30dp"
+        android:contentDescription="Question"
+        android:minHeight="48dp"
         android:textColor="@color/gray" />
 
     <TextView
@@ -52,7 +53,8 @@
         android:layout_marginTop="20dp"
         android:layout_toLeftOf="@id/remove"
         android:background="@drawable/border_bottom_text"
-        android:minHeight="30dp"
+        android:contentDescription="Answer"
+        android:minHeight="48dp"
         android:textColor="@color/gray" />
 
     <TextView
