--- a/app/src/main/res/layout/activity_edit_study_set.xml
+++ b/app/src/main/res/layout/activity_edit_study_set.xml
@@ -20,14 +20,15 @@
             android:layout_height="wrap_content"
             android:background="@drawable/border_bottom_text"
             android:cursorVisible="true"
-            android:focusable="true"
+            android:editable="false"
             android:hint="Subject, chapter, unit"
             android:paddingHorizontal="5dp"
             android:paddingVertical="10dp"
             android:textColor="@color/primary"
             android:textColorHint="@color/primary"
             android:textCursorDrawable="@color/black"
-            android:textSize="18dp" />
+            android:textSize="18dp"
+            android:textStyle="bold" />
 
         <TextView
             android:layout_width="match_parent"
@@ -43,8 +44,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:gravity="center"
-            android:orientation="vertical">
-        </LinearLayout>
+            android:orientation="vertical"></LinearLayout>
 
         <ImageButton
             android:id="@+id/add"
