--- a/app/src/main/res/layout/activity_study_set_details.xml
+++ b/app/src/main/res/layout/activity_study_set_details.xml
@@ -115,10 +115,12 @@
 
         <ImageButton
             android:id="@+id/img_edit"
-            android:layout_width="58dp"
-            android:layout_height="84dp"
-            android:layout_marginTop="48dp"
-            android:layout_marginEnd="32dp"
+            android:layout_width="86dp"
+            android:layout_height="82dp"
+            android:layout_marginTop="56dp"
+            android:layout_marginEnd="52dp"
+            android:background="@color/primary"
+            android:contentDescription="Edit"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             app:srcCompat="@android:drawable/ic_menu_edit" />
